# n02-rmg

./: .gitignore  CLAUDE.md  build.bat  errr.cpp  errr.h  kaillera_ui.cpp  kaillera_ui_mslist.cpp  kailleraclient.cpp  kailleraclient.h  n02.rc  n02p.vcxproj  p2p_appcode.h  p2p_ui.cpp  p2p_ui.h  player.cpp  resource.h  stats.cpp  stats.h  uihlp.h
.github/workflows/: build.yml
common/: k_socket.cpp
core/: p2p_core.cpp  p2p_core.h  p2p_instruction.cpp  p2p_instruction.h  p2p_message.h
kcore/: k_instruction.h  k_message.h  kaillera_core.cpp  kaillera_core.h
linux/: CMakeLists.txt
